# MinecraftPinger-QT

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
gtk/: CMakeLists.txt  README.md
gtk/src/: main.c  minecraft-ping.c  minecraft-ping.h  pinger-window.c  pinger-window.h  progress-ring.c  progress-ring.h
src/: MainWindow.cpp  MainWindow.h  main.cpp
